edit + delete customer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     <div class="container-drawer-content">
       <ul>
         <li routerLink=""><mat-icon>dashboard</mat-icon>Dashboard</li>
-        <li routerLink="user"><mat-icon>perm_identity</mat-icon>User</li>
+        <li routerLink="user"><mat-icon>perm_identity</mat-icon>Users</li>
         <li routerLink="notes"><mat-icon>note</mat-icon>Notes</li>
         <li routerLink="articles"><mat-icon>article</mat-icon>Articles</li>
         <li routerLink="customers"><mat-icon>group</mat-icon>Customers</li>
