--- a/src/app/dialog-edit-article/dialog-edit-article.component.html
+++ b/src/app/dialog-edit-article/dialog-edit-article.component.html
@@ -85,7 +85,7 @@
 
 
 <div class="container-btn" mat-dialog-actions>
-    <button [disabled]="loading" mat-flat-button color="warn" (click)="onNoClick()" [mat-dialog-close]="">
+    <button [disabled]="loading" mat-flat-button color="warn" [mat-dialog-close]="">
         Cancel
         <mat-icon>cancel</mat-icon>
     </button>
