--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,1 +1,21 @@
-<p>orders works!</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<button (click)="openDialogAddOrder()" matTooltip="Add Order" [matTooltipPosition]="'above'" class="btn-add" mat-fab
+    color="primary" aria-label="Example icon button with a delete icon">
+    <mat-icon>add</mat-icon>
+</button>
