--- a/src/app/orders/orders.component.html
+++ b/src/app/orders/orders.component.html
@@ -1,5 +1,64 @@
+<mat-form-field>
+    <mat-label>Type for search</mat-label>
+    <input type="string" [(ngModel)]="searchInput" matInput>
+    <button *ngIf="searchInput" matSuffix mat-icon-button aria-label="Clear" (click)="searchInput=''">
+        <mat-icon color="primary">close</mat-icon>
+    </button>
+</mat-form-field>
 
 
+<mat-card>
+
+    <table class="mat-elevation-z8">
+
+        <tr class="first-row">
+            <th>Order #</th>
+            <th>Customer</th>
+            <th>Status</th>
+            <th>Delivery date</th>
+        </tr>
+
+        <ng-container *ngFor="let order of listOrders; let i = index">
+            <tr #orderElement [attr.id]="i" (click)="toggleOrderElement(orderElement)">
+                <td *ngIf="searchFunction(order)">{{ order.orderNumber }}</td>
+                <td *ngIf="searchFunction(order)">{{ order.customer.name }}</td>
+                <td *ngIf="searchFunction(order)">{{ order.status }}</td>
+                <td *ngIf="searchFunction(order)">{{ order.deliveryDate }}</td>
+            </tr>
+
+            <!--eventuel als tr:-->
+
+            <tr class="no-hover" [style.display]=" this.showOrderDetails == i ? '' : 'none'">
+                <td class="container-order-details" colspan="4">
+                    <h2>Order Details</h2>
+
+                    <span>{{ order.customer.customerNumber }} - {{ order.customer.name }}</span> <br>
+                    <span>{{ order.customer.street }} / {{ order.customer.zipCode }} {{ order.customer.city }} </span>
+
+
+                    <h3>Positions:</h3>
+
+                    
+
+
+
+                </td>
+
+
+
+
+
+
+            </tr>
+
+
+
+        </ng-container>
+
+    </table>
+
+
+</mat-card>
 
 
 
