--- a/src/app/orders/orders.component.scss
+++ b/src/app/orders/orders.component.scss
@@ -59,3 +59,30 @@ table {
 
 }
 
+
+
+h2,
+h3 {
+    margin: 0 0 2px;
+}
+
+
+
+.container-animation {
+    animation: openDetails 0.3s ease-out 0s 1 normal forwards;
+    
+}
+
+@keyframes openDetails {
+    0% {
+        opacity: 0;
+        transform: rotateX(-100deg);
+        transform-origin: top;
+    }
+
+    100% {
+        opacity: 1;
+        transform: rotateX(0deg);
+        transform-origin: top;
+    }
+}
