--- a/src/app/orders/orders.component.scss
+++ b/src/app/orders/orders.component.scss
@@ -39,6 +39,16 @@ table {
 }
 
 
+.table-details {
+    tr {
+        &:hover {
+            cursor: unset;
+            background-color: unset;
+        }
+    }
+}
+
+
 .no-hover:hover {
     cursor: unset !important;
     background-color: white !important;
@@ -70,7 +80,7 @@ h3 {
 
 .container-animation {
     animation: openDetails 0.3s ease-out 0s 1 normal forwards;
-    
+
 }
 
 @keyframes openDetails {
