--- a/src/app/orders/orders.component.scss
+++ b/src/app/orders/orders.component.scss
@@ -1,5 +1,5 @@
 .btn-add {
-    position: fixed;
+    position: absolute;
     top: 64px;
     right: 64px;
 }
@@ -66,6 +66,35 @@ h3 {
     margin: 0 0 2px;
 }
 
+.header-line-order-details {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.container-icons-header-line {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 4px;
+
+    mat-icon {
+        cursor: pointer;
+        transition-duration: 120ms;
+
+        &:hover {
+            scale: 1.1;
+            transition-duration: 120ms;
+        }
+
+    }
+
+
+}
+
+
+
+
 .flex-container-table-details {
     display: flex;
     flex-wrap: wrap;
@@ -83,10 +112,15 @@ h3 {
 }
 
 
+.order-sum-text-right,
+.text-align-right {
+    text-align: end !important;
+}
 
 
 .container-animation {
     animation: openDetails 0.3s ease-out 0s 1 normal forwards;
+    border-bottom: 2px solid black !important;
 }
 
 @keyframes openDetails {
